--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
+    "csv-parse": "^5.0.4",
     "express": "^4.18.1",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.7.0",
