--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "swagger-ui-express": "^4.4.0",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.7.0",
