--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "strict": false
+    "strict": false,
+    "resolveJsonModule": true
   },
   "lib": ["es2015"]
 }
