feat: docker-compose database postgress configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "sourceMap": true,
     "outDir": "dist",
     "strict": false,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "lib": ["es2015"]
 }
