--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "csv-parse": "^5.0.4",
     "express": "^4.18.1",
     "multer": "^1.4.4",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.2.45",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
-    "swagger-ui-express": "^4.4.0",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.4",
+    "swagger-ui-express": "^4.4.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
