--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,8 +1,13 @@
 {
   "type": "postgres",
-  "host": "localhost",
   "port": 5432,
+  "host": "localhost",
   "username": "docker",
-  "password": "ignite",
-  "database": "rentx"
+  "password": "docker",
+  "database": "cars",
+  "migrations": ["./src/database/migrations/*.ts"],
+  "entities": ["./src/modules/**/entities/*.ts"],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
