--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "multer": "^1.4.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0",
     "typeorm": "0.2.45",
     "uuid": "^8.3.2"
   },
@@ -24,8 +25,8 @@
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.4",
     "swagger-ui-express": "^4.4.0",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.8.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.4"
   }
 }
